--- a/index.html
+++ b/index.html
@@ -1,62 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Home | My Portfolio</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f4f4f4;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
+    <title>Home My Portfolio</title>
+    <style>
+      body {
+        font-family: Arial, 
+        sans-serif; margin: 0;
+        background: #f4f4f4;
+      }
 
-    nav {
-      background: #333;
-      color: white;
-      padding: 1rem;
-      display: flex;
-      justify-content: space-between;
-    }
+      nav {
+        background: #333;
+        color: white;
+        padding: 1rem;
+        display: flex;
+        Justify-content: space-between;
+      }
 
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 1rem;
-    }
+      nav a {
+        color: white;
+        text-decoration: none;
+        margin: 0 1rem;
+      }
 
-    nav a:hover {
-      color: #ffd700;
-    }
+      nav a:hover {
+        color: #ffd700;
+      }
 
-    main {
-      padding: 2rem;
-    }
+      main {
+        padding: 2rem;
+      }
 
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background: #333;
-      color: white;
-    }
-  </style>
-</head>
-<body>
-  <nav>
-    <div>MyPortfolio</div>
-    <div>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
-    </div>
-  </nav>
+      footer {
+        text-align: center;
+        padding: 1rem;
+        background: #333;
+        color: white;
+      }
+    </style>
+  </head>
+  <body>
+    <nav>
+      <div>MyPortfolio</div>
+      <div>
+        <a href="index.html">Home</a>
+        <a href="academic.html">Academic</a> 
+        <a href="projects.html">Projects</a>
+        <a href="community.html">Services</a> 
+      </div>
+    </nav>
+
 
   <main>
+  <div id="home" class="tabcontent">
+  <div class="container">
     <h1>Welcome to My Portfolio</h1>
-    <p>This is the homepage with an overview of my work.</p>
-  </main>
+    <img src="https://codehs.com/uploads/d7c8aa8df19b749b45c9a27dc79c8b47" alt="Image of Me" class="profile-img">
+    <h1>Introduction</h1>
+    <p>HI! My name is Aaron Quinn Salvania. I am currently a Graduating Senior of Waipahu Highschool 2025. I like to play the guitar and meet new people.</p>
+    <h1>Who am I?</h1>
+    <p>I am an outgoing person who loves to socialize and build bonds with new people. I am currently employed at Taniokas Seafood and Catering.</p>
+    <h1>Future Goals</h1>
+    <p>I plan on going to UH Manoa to Double Major in Education and Business as I plan to one day become a teacher and possibly make a business as diferent source of income. Though this may be challenging I will perserver to reach the end Goal.</p>\
+  </div>
+  </div> 
+</main>
 
-  <footer>&copy; 2025 My Portfolio</footer>
+
+<footer>&copy; 2025 My Portfolio</footer>
 </body>
 </html>
