--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div id="home" class="tabcontent">
   <div class="container">
     <h1>Welcome to My Portfolio</h1>
-    <img src="https://codehs.com/uploads/d7c8aa8df19b749b45c9a27dc79c8b47" alt="Image of Me" class="profile-img">
+    <img src="https://1drv.ms/i/c/882dd8559d74ea0a/Ef5h69Pzr3tMgYUxSGhWstsBa7-Cncbml5ldDA685czBgw?e=NXcdJI" alt="Image of Me" class="profile-img">
     <h1>Introduction</h1>
     <p>HI! My name is Aaron Quinn Salvania. I am currently a Graduating Senior of Waipahu Highschool 2025. I like to play the guitar and meet new people.</p>
     <h1>Who am I?</h1>
